Remove unnecessary component loop in analyzeNotificationCriteria
Signed-off-by: 4naesthetic <37602498+4naesthetic@users.noreply.github.com>